--- a/middleware/.env
+++ b/middleware/.env
@@ -1,2 +1,2 @@
 POSTGRESS_URL="postgres://postgres:postgres@localhost:5432/stocksdb?sslmode=disable"
-POSTGRESS_URL1= "user=postgres password=postgres dbname=stockdb sslmode=disable"
+POSTGRESS_URL1= "user=postgres password=postgres dbname=stocksdb sslmode=disable"
